data/derived/sp14/progs/unify/prog2822.ml.out
Characters 135-147:
  let args = failwith List.combine l1 l2 in
                      ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list -> ('a * 'b) list
       but an expression was expected of type string
